plugins {
	id 'java'
}

repositories {
	maven { url 'https://jitpack.io' }
	
	jcenter()
}

compileJava {
	options.encoding = "UTF-8"
}

sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12

dependencies {
	implementation('com.github.21Joakim:Jockie-Utils:jda-v4-SNAPSHOT') {
		exclude group: 'net.dv8tion', module: 'JDA'
	}
	
	compile 'club.minnced:discord-webhooks:0+'
	
	compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'

	implementation('net.dv8tion:JDA:4+') {
		exclude module: 'opus-java'
	}
	
	implementation 'org.mongodb:mongodb-driver-sync:+'
	
	compile group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.2'
	
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
	
	compile group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.0-beta-1', ext: 'pom'
	
	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.28'
	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.28'
	compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.28'
	compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.28'
	
	compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.14.v20181114'
	compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.14.v20181114'
	
	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
	
	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.2'
}
